small ui improvements

--- a/index.html
+++ b/index.html
@@ -21,20 +21,21 @@
 
 
     </div>
+    <label id="gainSliderLabel" for="gainSlider">Input length: </label>
     <input type="range" id="audioZoom" min="1" max="300" step="1" value="40">
     <label id="audioZoomLabel" for="audioZoom"></label>
     <button id="resumeButton">resume</button>
     <div>
 
-        <input type="number" name="distanceInput" id="distanceInput" value=45.74>
+        <input type="number" name="distanceInput" id="distanceInput" value=10>
         <label for="distanceInput">Distance [m]</label>
     </div>
     <div>
-        <input type="number" name="temperatureInput" id="temperatureInput" value=24.4>
+        <input type="number" name="temperatureInput" id="temperatureInput" value=20>
         <label for="temperatureInput">Temperature [°C]</label>
     </div>
     <div>
-        <input type="number" name="maxSpeedInput" id="maxSpeedInput" value=3800>
+        <input type="number" name="maxSpeedInput" id="maxSpeedInput" value=350>
         <label for="maxSpeedInput">Maximum expected velocity [ft/s]</label>
     </div>
     <div id="results"></div>
