--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <label id="gainSliderLabel" for="gainSlider">Input length: </label>
     <input type="range" id="audioZoom" min="1" max="300" step="1" value="40">
     <label id="audioZoomLabel" for="audioZoom"></label>
-    <button id="resumeButton">resume</button>
+    <button id="resumeButton">Start</button>
     <div>
 
         <input type="number" name="distanceInput" id="distanceInput" value=10>
