--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div>
         <label id="gainSliderLabel" for="gainSlider">Gain: </label>
         <input type="range" id="gainSlider" min="1" max="10" step="0.1" value="1">
+        <select name="audioInputSelect" id="audioInputSelect">
+        </select>
     </div>
     <div id="drawingLine">
         <input type="range" id="trigger1Slider" orient="vertical" min="0" max="1" step="0.01" value="0.7" />
@@ -25,8 +27,9 @@
     <input type="range" id="audioZoom" min="1" max="300" step="1" value="40">
     <label id="audioZoomLabel" for="audioZoom"></label>
     <button id="resumeButton">Start</button>
-    <div>
 
+
+    <div>
         <input type="number" name="distanceInput" id="distanceInput" value=10>
         <label for="distanceInput">Distance [m]</label>
     </div>
