--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <label id="gainSliderLabel" for="gainSlider">Gain: </label>
         <input type="range" id="gainSlider" min="1" max="10" step="0.1" value="1">
         <select name="audioInputSelect" id="audioInputSelect">
+            <option value="auto">Auto</option>
         </select>
     </div>
     <div id="drawingLine">
