--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     </div>
     <div id="results"></div>
 </body>
-<script src="index.js"></script>
+<script src="ui.js"></script>
+<script src="draw.js"></script>
+<script src="index2.js"></script>
 
 </html>
