--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <input type="number" name="maxSpeedInput" id="maxSpeedInput" value=350>
         <label for="maxSpeedInput">Maximum expected velocity [ft/s]</label>
     </div>
+    <input type="checkbox" name="minimalOutputCheckbox" id="minimalOutputCheckbox">
+    <label for="minimalOutputCheckbox">Velocity only</label>
     <div id="results"></div>
 </body>
 <script src="ui.js"></script>
