--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
 </body>
 <script src="ui.js"></script>
 <script src="draw.js"></script>
-<script src="index2.js"></script>
+<script src="index.js"></script>
 
 </html>
